syntax = "proto3";
package grpc;

option go_package="/cmd/api/grpcproto";

message Log{
    string name = 1;
    string data = 2;
}

message LogRequest{
    Log logEntry = 1;
}

message LogResponse{
    string result=1;
}


service LogService {
    rpc writeLog(LogRequest) returns (LogResponse);
}